--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -5,23 +5,23 @@
       <hr>
 
       <label for="fname"><b>First Name</b></label>
-      <input type="text" placeholder="Enter your First Name" name="fname" required>
+      <input type="text" placeholder="Enter your First Name" name="fname" [(ngModel)]="fname" required>
 
       <label for="lname"><b>Last Name</b></label>
-      <input type="text" placeholder="Enter your Last Name" name="lname" required>
+      <input type="text" placeholder="Enter your Last Name" name="lname" [(ngModel)]="lname" required>
 
       <label for="email"><b>Email</b></label>
-      <input type="text" id="emailId" placeholder="Enter Email" name="email" required>
+      <input type="text" id="emailId" placeholder="Enter Email" name="email" [(ngModel)]="email" required>
 
       <label for="psw"><b>Password</b></label>
-      <input type="password" id="pwd" placeholder="Enter Password" name="psw" required>
+      <input type="password" id="pwd" placeholder="Enter Password" name="psw" [(ngModel)]="psw" required>
 
       <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+      <input type="password" placeholder="Repeat Password" name="psw_repeat" [(ngModel)]="psw_repeat" required>
       <hr>
 
 
-      <button type="submit" class="registerbtn" (click)="goToHome();">Register</button>
+      <button type="submit" class="registerbtn" (click)="goToRegister();">Register</button>
     </div>
 
     <div class="container signin">
