--- a/myshoppinglist-client/src/app/app.component.html
+++ b/myshoppinglist-client/src/app/app.component.html
@@ -1,14 +1,15 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
     <a href="#" class="navbar-brand">My Shopping List</a>
-    <div class="navbar-nav mr-auto">
+    <!--<div class="navbar-nav mr-auto">
       <li class="nav-item">
         <a routerLink="items" class="nav-link">Item List</a>
       </li>
       <li class="nav-item">
         <a routerLink="add" class="nav-link">Add</a>
       </li>
-    </div>
+    </div> -->
+
   </nav>
 
   <div class="container mt-3">
