--- a/myshoppinglist-client/src/app/components/login/login.component.css
+++ b/myshoppinglist-client/src/app/components/login/login.component.css
@@ -24,36 +24,11 @@
     margin-bottom: 25px;
   }
   
-  /* Set a style for the submit/register button */
-  .registerbtn {
-    background-color: #0f7c90;
-    color: white;
-    padding: 16px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-  }
-  
-  .registerbtn:hover {
-    opacity:1;
-  }
-  
   /* Add a blue text color to links */
   a {
     color: dodgerblue;
   }
-  
-  /* Set a grey background color and center the text of the "sign in" section */
-  .signin {
-    background-color: #f1f1f1;
-    text-align: center;
+
+  button {
+    margin-right: 25px;
   }
-  
-  #register_form {
-  
-    display: none;
-  
-  }
-  
